syntax = "proto3";

package grpc;

service VeloNode {
    rpc SubmitVeloTx (VeloTxRequest) returns (VeloTxReply) {
    }
    rpc GetExchangeRate (GetExchangeRateRequest) returns (GetExchangeRateReply) {
    }
    rpc GetCollateralHealthCheck (GetCollateralHealthCheckRequest) returns (GetCollateralHealthCheckReply) {
    }
    rpc RebalanceReserve (RebalanceReserveRequest) returns (RebalanceReserveReply) {
    }
}

message VeloTxRequest {
    string signedVeloTxXdr = 1;
}

message VeloTxReply {
    string signedStellarTxXdr = 1;
    string message = 2;
}

message GetExchangeRateRequest {
    string assetCode = 1;
    string issuer = 2;
}

message GetExchangeRateReply {
    string assetCode = 1;
    string issuer = 2;
    string redeemableCollateral = 3;
    string redeemablePricePerUnit = 4;
}

message GetCollateralHealthCheckRequest {
}

message GetCollateralHealthCheckReply {
    string assetCode = 1;
    string assetIssuer = 2;
    string requiredAmount = 3;
    string poolAmount = 4;
}

message RebalanceReserveRequest {
}

message RebalanceReserveReply {
    repeated RebalanceCollateral items = 1;
    string SignedStellarTxXdr = 2;
}

message RebalanceCollateral {
    string assetCode = 1;
    string assetIssuer = 2;
    string requiredAmount = 3;
    string poolAmount = 4;
}
